--- a/css/style.css
+++ b/css/style.css
@@ -20,3 +20,12 @@
     border-bottom: 1px solid #393939;
     padding-bottom: 20px;
 }
+
+.login-user {
+    text-align: center;
+    background-color: #393939;
+    color: #fff;;
+    border-top: 6px solid #000;
+    padding: 20px;
+    margin-top:10px;
+}
